<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/taluk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taluk"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hobli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobli"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/VA_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvPushApplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pushing_application_to_another_va"
            android:textColor="#377691"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_application_list"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdgeLength="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/total_Applicants"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:background="@drawable/panel_new"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/sl_No"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/sl"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_Name1"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/applicant_name"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_Id"
                        android:layout_width="145dp"
                        android:layout_height="wrap_content"
                        android:text="@string/applicant_id"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <ListView
                    android:id="@+id/list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:scrollbars="horizontal"
                    android:background="#FDF4B9"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="1sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:text="@string/submit"
                    android:background="@drawable/button_background"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:text="@string/back"
                    android:background="@drawable/button_background"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginStart="40dp"/>

            </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>



</LinearLayout>