<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="#FFA34C"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_background">

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp">
            <TextView
                android:text="@string/whether_the_applicating_updated_ndetails_are_correct"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:text="@string/colon"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical" />

            <RadioGroup
                android:id="@+id/radioGroupA"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_column="3"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/radioButton1A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true"
                    android:text="@string/yes"
                    android:textSize="16sp"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/radioButton2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="false"
                    android:text="@string/no"
                    android:textSize="16sp"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:textColor="@android:color/black" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp">

            <TextView
                android:text="@string/remarks"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:text="@string/colon"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_column="2"/>
            <EditText
                android:id="@+id/tvRemarks"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_remarks"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:inputType="textImeMultiLine"
                android:imeOptions="actionDone"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/enter_the_remarks"/>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="#FFA34C"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/iv_scst"
        android:layout_width="100dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_person_24dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/capture_photo"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDownDocs"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:text="@string/down_docs_n_at_hq_only"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            style="?android:buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnViewDocs"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/view_docs_n_at_hq_only"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginStart="40dp"
            style="?android:buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/back"
            android:background="@drawable/button_background"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            style="?android:buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnReport"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:text="@string/submit_report"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="40dp"
            style="?android:buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>